--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.13"
 requests = "^2.32.3"
 pandas = "^2.2.3"
+psycopg2 = "^2.9.10"
+sqlalchemy = "^2.0.38"
 
 
 [build-system]
